# machine-vision-mcp

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  start.sh
api/: Dockerfile  requirements.txt
api/app/: __init__.py  claude_integration.py  main.py
api/app/routers/: __init__.py  analysis.py  claude.py  health.py  upload.py
docs/: hosting-options.md
examples/: basic_usage.py  llm_workflows.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  main.jsx  theme.js
frontend/src/components/: ChatInterface.jsx  Footer.jsx  Header.jsx  ResultVisualization.jsx
frontend/src/pages/: AnalysisPage.jsx  HomePage.jsx  NotFoundPage.jsx  UploadPage.jsx
frontend/src/utils/: api.js
src/: __init__.py  mcp.py
src/features/: detection.py  utils.py
src/machine_vision_mcp/: __init__.py
src/schemas/: __init__.py
tests/: test_detection.py  test_utils.py
